tenants/kropy/prod/kropy-api-email/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kropy-api-email-ingress
  namespace: kropy-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: kropy-prod-kropy-api-email-cors@kubernetescrd, kube-system-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - kropy-api-email.ikedadev.com
    secretName: kropy-api-email-ikedadev-tls
  rules:
  - host: kropy-api-email.ikedadev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kropy-api-email-svc
            port:
              number: 80
